# streamdeck-bridge

./: .gitignore  AGENTS.md  Cargo.toml  INTEGRATION.md  LICENSE  README.md
docs/: architecture.md  design.md  protocol.md  requirement-gathering.md  vision.md
docs/deep-research/stream-deck-xl-direct-control/: overview.md
docs/deep-research/stream-deck-xl-direct-control/full-applications-and-frameworks/: architecture-patterns.md  bitfocus-companion.md  other-open-source-applications.md
docs/deep-research/stream-deck-xl-direct-control/hardware-and-hid-protocol/: device-control-commands.md  hardware-specs-and-variants.md  hid-protocol-deep-dive.md  image-encoding-and-transfer.md
docs/deep-research/stream-deck-xl-direct-control/image-update-performance/: animation-techniques.md  throughput-and-latency.md
docs/deep-research/stream-deck-xl-direct-control/macos-system-automation/: app-and-window-management.md  audio-and-media-control.md  keyboard-and-mouse-simulation.md  system-monitoring-apis.md
docs/deep-research/stream-deck-xl-direct-control/novel-use-cases-and-ideas/: advanced-interaction-patterns.md  control-plane-and-api-architecture.md  creative-and-unusual-uses.md  developer-productivity.md  smart-home-and-iot.md  status-dashboards-and-analytics.md
docs/deep-research/stream-deck-xl-direct-control/open-source-libraries/: browser-webhid.md  node-js-ecosystem.md  python-ecosystem.md  rust-go-and-other-languages.md
scripts/: build.sh  install-launchd.sh  uninstall-launchd.sh
src/: device.rs  main.rs  protocol.rs  server.rs
