[package]
name = "streamdeck-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
elgato-streamdeck = { version = "0.12", features = ["async"] }
futures-util = "0.3"
image = { version = "0.25", features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
